# bbc-task-njg

./: README.md  pyproject.toml
features/: battleship_state_tracker.feature
features/steps/: battleship_state_tracker_steps.py
src/: board.py  player.py  ship.py
tests/: test_battleships.py  test_board.py  test_player.py  test_ship.py
